--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+
+sudo: false
+
 language: java
 
 install: true
@@ -6,3 +9,20 @@ os: linux
 dist: trusty
 jdk: oraclejdk8
 
+
+cache:
+  directories:
+    - "$HOME/.cache"
+deploy:
+  provider: script
+  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  skip_cleanup: true
+  on:
+    tags: true
+
+notifications:
+  email:
+    recipients:
+      - julio@packagecloud.io
+    on_success: change
+    on_failure: always
