--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ deploy:
 notifications:
   email:
     recipients:
-      - julio@packagecloud.io
+      - sedat.kilinc@attempto.eu
     on_success: change
     on_failure: always
