--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ cache:
     - "$HOME/.cache"
 deploy:
   provider: script
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  script: "mvn cobertura:cobertura"
   skip_cleanup: true
   on:
     tags: true
@@ -23,6 +23,6 @@ deploy:
 notifications:
   email:
     recipients:
-      - sedat.kilinc@attempto.eu
+      - julio@packagecloud.io
     on_success: change
     on_failure: always
